Adjusting cell input size to fix overflow on selected cell border.

--- a/demo/main.css
+++ b/demo/main.css
@@ -84,7 +84,7 @@
       border: 0px;
       font: inherit;
       line-height: inherit;
-      width: 127px;
+      width: 122px;
       padding-left: -1rem;
       min-height: 38px;
       margin: -8px 0 -8px -10px; }
