--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -102,7 +102,7 @@ $highlight-border: 1px solid #eeeeee;
       border: 0px;
       font: inherit;
       line-height: inherit;
-      width: 127px;
+      width: 122px;
       padding-left: -1rem;
       min-height: 38px;
       margin: -8px 0 -8px -10px;
